[gd_scene load_steps=5 format=3 uid="uid://qcrc22mwyj2u"]

[ext_resource type="Script" path="res://Scenes/Menus/SettingsMenu.gd" id="1_8dhfp"]
[ext_resource type="FontFile" uid="uid://cf0og4aanegjb" path="res://Assets/UIpack/Font/kenvector_future_thin.ttf" id="2_imlea"]
[ext_resource type="Script" path="res://Scenes/Menus/GrabFocus.gd" id="3_faftk"]

[sub_resource type="Theme" id="Theme_wo1pt"]
default_font = ExtResource("2_imlea")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8dhfp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.5
offset_top = -129.0
offset_right = 270.5
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wo1pt")

[node name="Resolution Split" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ResolutionUIText" type="Label" parent="VBoxContainer/Resolution Split"]
layout_mode = 2
text = "Resolution:"

[node name="ResOptionButton" type="OptionButton" parent="VBoxContainer/Resolution Split"]
layout_mode = 2
script = ExtResource("3_faftk")

[node name="FullScreen Split" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="VBoxContainer/FullScreen Split"]
layout_mode = 2
text = "Fullscreen:"

[node name="FScrCheckBox" type="CheckBox" parent="VBoxContainer/FullScreen Split"]
layout_mode = 2

[node name="VSyncSplit" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Vsync" type="Label" parent="VBoxContainer/VSyncSplit"]
layout_mode = 2
text = "Vsync"

[node name="VsCheckBox" type="CheckBox" parent="VBoxContainer/VSyncSplit"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="VBoxContainer/Resolution Split/ResOptionButton" to="." method="_on_res_option_button_item_selected"]
[connection signal="toggled" from="VBoxContainer/FullScreen Split/FScrCheckBox" to="." method="_on_f_scr_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/VSyncSplit/VsCheckBox" to="." method="_on_vs_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
